--- a/_includes/blog-overview.html
+++ b/_includes/blog-overview.html
@@ -19,7 +19,7 @@
                         {{ site.data.textblocks.texts.reading_time }} {{ post.duration }} {{ site.data.textblocks.texts.min}} 
                     </div>
                     {% if post.image %}
-                      <img src="{{ post.image }}" alt="{{ post.title }}" class="w-full h-full object-cover" loading="lazy">
+                      <img src="{{ post.image | relative_url }}" alt="{{ post.title }}" class="w-full h-full object-cover" loading="lazy">
                     {% endif %}
                     <div class="absolute rounded-full bg-black group-hover:bg-pink-100 -bottom-2.5 -right-2.5 w-16 h-16 flex items-center justify-center border-white border-12 scale-100 group-hover:scale-110 transition-all duration-300">
                         <svg class=" scale-100 group-hover:scale-90 transition-all duration-300" width="22" height="12" viewBox="0 0 22 12" fill="none" xmlns="http://www.w3.org/2000/svg">
