--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
   <!-- CSS -->
 
-  <link rel="stylesheet" href="/assets/main.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
