--- a/_includes/steps.html
+++ b/_includes/steps.html
@@ -4,15 +4,16 @@
 {% assign section_data = site.data.textblocks.pages[page_key].sections[section] | default:
 site.data.textblocks.sections[section] %}
 
-<div class="px-4 py-32 bg-purple-50 rounded-3xl h-screen">
+<div class="px-8 md:px-4 py-10 md:py-32 bg-purple-50 rounded-3xl min-h-screen">
     <div class="max-w-7xl mx-auto">
         <div class="text-center mb-16">
             {% include section-headline.html text=section_data.headline %}
             {% include section-subheadline.html text=section_data.subheadline %}
         </div>
-        <div class="flex gap-4 mb-16">
+        <div class="flex flex-col md:flex-row gap-8 md:gap-4 mb-16">
             {% for step in section_data.steps %}
-            <div class="relative flex-1 flex justify-center items-center is-animated">
+            <div class="relative flex-1 flex justify-center items-center is-animated"
+            style="animation-delay: {{ forloop.index0 | times: 0.4 }}s;">
                 <svg class="w-full h-full" width="336" height="260" viewBox="0 0 336 260" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path class="fill-{{ step.bg }}" d="M108 0C119.046 0 127.586 9.49047 132.889 19.1794C139.681 31.5865 152.858 40 168 40C183.142 40 196.319 31.5865 203.111 19.1794C208.414 9.49047 216.954 0 228 0H316C327.046 2.06162e-06 336 8.95431 336 20V240C336 251.046 327.046 260 316 260H20C8.95431 260 4.02687e-07 251.046 0 240V20C0 8.95431 8.95431 3.22129e-08 20 0H108Z"/>
                 </svg>  
@@ -21,11 +22,11 @@ site.data.textblocks.sections[section] %}
                         {{forloop.index}}
                     </div>
                 </div>
-                <div class="absolute top-1/3 left-1/2 -translate-x-1/2 text-center">         
+                <div class="absolute top-1/3 left-1/2 -translate-x-1/2 text-center w-full px-8">         
                     <div class="!font-semibold">
                         {% include section-subheadline.html text=step.title animation=false %}
                     </div>
-                    <p class="">
+                    <p class="text-lg md:text-base">
                         {{ step.text }}
                     </p>
                 </div>
