--- a/_includes/blog-overview.html
+++ b/_includes/blog-overview.html
@@ -4,17 +4,17 @@
 {% assign section_data = site.data.textblocks.pages[page_key].sections[section] | default: site.data.textblocks.sections[section] %}
 
 
-<div class="px-4 py-12">
+<div class="px-8 md:px-4 py-10 md:py-32 mt-24 {% if section_data.bg %}bg-{{section_data.bg}} rounded-3xl md:rounded-none md:bg-transparent {% endif %}">
     <div class="max-w-7xl mx-auto">
         <div class="text-center mb-8">
             {% include section-subheadline.html text=section_data.subheadline %}
             {% include section-headline.html text=section_data.headline %}
         </div>
-        <div class="flex flex-col md:flex-row gap-8 justify-center mb-8">
+        <div class="flex overflow-x-scroll overflow-y-hidden flex-row gap-8 md:justify-center mb-8 is-animated">
             {% assign blog_posts = site.categories.financial-advice | slice: 0, 4 %}
             {% for post in blog_posts %}
-              <a href="{{ post.url }}" class="flex-1 group">
-                <div class="mb-4 rounded-3xl aspect-[1/1] relative bg-{{ post.color }}">
+              <a href="{{ post.url }}" class="md:flex-1 group">
+                <div class="mb-4 w-[60vw] md:w-full rounded-3xl aspect-[1/1] relative bg-{{ post.color }}">
                     <div class="absolute top-4 left-4 bg-white text-xs rounded-lg px-2 py-1">
                         {{ site.data.textblocks.texts.reading_time }} {{ post.duration }} {{ site.data.textblocks.texts.min}} 
                     </div>
