--- a/_includes/image-quote-text.html
+++ b/_includes/image-quote-text.html
@@ -1,5 +1,5 @@
-<div class="px-4 my-32">
-    <div class="flex flex-col md:flex-row items-center gap-8 max-w-7xl mx-auto 
+<div class="px-8 md:px-4 py-10 md:py-32 mt-24 {% if include.bg %}bg-{{include.bg}} rounded-3xl {% endif %}">
+    <div class="flex flex-col-reverse md:flex-row items-center gap-8 max-w-7xl mx-auto 
     {% if include.left %}md:flex-row{% else %}md:flex-row-reverse{% endif %}">
         <!-- Image -->
         <div class="w-full md:w-1/2 flex justify-center relative">
@@ -27,10 +27,15 @@
                         {% assign tag_class = "right-4 bottom-1/4 translate-y-10" %}
                     {% endif %}
                 {% endif %}
-                <span
-                    class="flex items-center px-4 py-2 rounded-full text-xl w-fit border-12 border-white {{ tag.color }} absolute {{ tag_class }}"
-                    data-scroll
-                    data-scroll-speed="{{ forloop.index0 | minus: 0.4 | times: 0.05 }}">
+                <div class="flex items-center text-sm md:text-xl w-fit absolute {{ tag_class }}"
+                data-scroll
+                data-scroll-speed="{{ forloop.index0 | minus: 0.4 | times: 0.05 }}">
+                    <span class="px-4 py-2 rounded-full border-12 border-white {{ tag.color }} 
+                    {% if forloop.index == 1 or forloop.index == 4 %}
+                        is-animated
+                    {% else %}
+                        is-animated-reverse
+                    {% endif %}">
                     {% if tag.svg %}
                         <span class="w-5 h-5 mr-2 inline-block align-middle {% if tag.svg_color %}{{ tag.svg_color }}{% endif %}">
                             {{ site.data.svgs[tag.svg] }}
@@ -38,19 +43,20 @@
                     {% endif %}
                     <span>{{ tag.text }}</span>
                 </span>
+                </div>
                 {% endfor %}
             </div>
             {% endif %}
         </div>
         <!-- Text Content -->
-        <div class="w-full md:w-1/2 flex flex-col items-start">
+        <div class="w-full md:w-1/2 flex flex-col items-start {% if include.centered %}text-center md:text-left{% endif %}">
             {% include section-headline.html text=include.headline %}
             {% include section-subheadline.html text=include.subheadline %}
-            <div class="mb-4 is-animated">
+            <div class="mb-4 is-animated text-lg md:text-base">
              {{ include.text | markdownify }}
             </div>
             {% if include.button_text and include.button_link %}
-            {% include button.html text=include.button_text link=include.button_link %}
+                {% include button.html text=include.button_text link=include.button_link %}
             {% endif %}
         </div>
     </div>
