--- a/_includes/page-headline.html
+++ b/_includes/page-headline.html
@@ -1,1 +1,1 @@
-<h2 class="text-7xl font-bold font-display mb-4 is-animated">{{ include.text }}</h2>
+<h2 class="text-7xl font-bold font-display mb-4 {% if include.animation != false and include.animation != 'false' %}is-animated{% endif %}">{{ include.text }}</h2>
