--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -1,4 +1,4 @@
-<footer class="h-[80vh] flex flex-col bg-purple-50">
+<footer class="min-h-[80vh] flex flex-col bg-purple-50">
     <div class="pt-8 px-8 md:pt-24 md:px-4">
         <div class="max-w-7xl mx-auto">
             <svg class="w-full h-auto is-animated-footer overflow-hidden" width="1038" height="235" viewBox="0 0 1038 235" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -11,7 +11,7 @@
             </svg>
         </div>
       </div>
-      <div class="flex-1 flex items-center px-8 md:px-4">
+      <div class="flex-1 flex items-center px-8 md:px-4 pb-16 pt-16">
         <div class="max-w-7xl mx-auto w-full flex flex-col md:flex-row justify-between gap-4">
           <div class="text-center md:text-left mt-4 md:mt-0">
             {{ site.data.textblocks.footer.address_street }}<br>
