--- a/_includes/layout/nav.html
+++ b/_includes/layout/nav.html
@@ -1,4 +1,4 @@
-<nav class="fixed top-0 md:top-5 left-0 w-full z-50 md:px-2 opacity-0 animate-fadein-100">
+<nav class="fixed top-0 md:top-5 left-0 w-full z-50 md:px-2">
     <div class="z-50 relative bg-white max-w-8xl mx-auto flex items-center justify-between pl-8 pr-6 md:px-4 py-5 md:py-3 md:rounded-2xl border-b border-grey md:border-0">
       <!-- Left: Logo and Main Menu -->
       <div class="flex items-center space-x-8">
@@ -15,7 +15,9 @@
         </a>
         <!-- Main Menu -->
         {% for link in site.data.textblocks.nav.nav_links %}
-          <a href="{{ link.url }}" class="hidden md:inline">{{ link.text }}</a>
+          <a href="{{ link.url }}" class="hidden md:inline {% if page.permalink == link.url or page.url == link.url or page.permalink == link.url | append: '/' or page.url == link.url | append: '/' or page.permalink contains link.url or page.url contains link.url %}font-bold{% endif %}">
+            {{ link.text }}
+          </a>
         {% endfor %}
         <div class="hidden md:flex border-[0.5px] text-sm px-2 py-1.5 border-grey rounded-lg bg-white items-center justify-center">
           <svg class="w-4 h-4 mr-1.5" xmlns="http://www.w3.org/2000/svg" width="241.008" height="241.009" viewBox="0 0 241.008 241.009">
@@ -42,6 +44,7 @@
         </button>
       </div>
     </div>
+    <!-- Language Switch -> TODO -->
     <div id="language-switch" class="absolute top-5 right-20 z-50 flex border-[0.5px] text-sm px-2 py-1.5 border-grey rounded-lg bg-white items-center justify-center opacity-0 pointer-events-none transition-opacity duration-700 md:hidden">
       <svg class="w-4 h-4 mr-1.5" xmlns="http://www.w3.org/2000/svg" width="241.008" height="241.009" viewBox="0 0 241.008 241.009">
         <g id="Group_3" data-name="Group 3" transform="translate(0 0)">
@@ -55,7 +58,7 @@
     <div id="nav-overlay" class="fixed px-8 top-0 left-0 h-screen w-screen inset-0 bg-white z-30 flex flex-col justify-between pt-32 pb-16 opacity-0 pointer-events-none transition-opacity duration-700 md:hidden">
       <div class="flex flex-col space-y-8 ">
         {% for link in site.data.textblocks.nav.nav_links %}
-        <a href="{{ link.url }}" class="text-3xl flex justify-between items-center w-full">
+        <a href="{{ link.url }}" class="text-3xl flex justify-between items-center w-full {% if page.permalink == link.url or page.url == link.url or page.permalink == link.url | append: '/' or page.url == link.url | append: '/' or page.permalink contains link.url or page.url contains link.url %}font-bold{% endif %}">
           {{ link.text }}
           <svg width="28" height="24" viewBox="0 0 28 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M1 12H27M27 12L15.8571 23M27 12L15.8571 1" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -73,7 +76,7 @@
       </div>
     </div>
   </nav>
-  <a href="/upload" class="fixed bottom-2 right-2 bg-black w-14 h-14 rounded-full z-50 flex items-center justify-center opacity-0 animate-fadein-100 md:hidden">
+  <a href="{{ site.data.textblocks.nav.nav_floating_cta.link }}" class="fixed bottom-2 right-2 bg-black w-14 h-14 rounded-full z-50 flex items-center justify-center opacity-0 animate-fadein-100 md:hidden">
     <svg width="22" height="28" viewBox="0 0 22 28" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M13.8571 1V6.77778C13.8571 7.16087 14.0077 7.52827 14.2756 7.79915C14.5435 8.07004 14.9068 8.22222 15.2857 8.22222H21M13.8571 1H3.85714C3.09938 1 2.37266 1.30436 1.83684 1.84614C1.30102 2.38791 1 3.12271 1 3.88889V24.1111C1 24.8773 1.30102 25.6121 1.83684 26.1539C2.37266 26.6956 3.09938 27 3.85714 27H18.1429C18.9006 27 19.6273 26.6956 20.1632 26.1539C20.699 25.6121 21 24.8773 21 24.1111V8.22222M13.8571 1L21 8.22222M11 12.5556V21.2222M11 12.5556L7.42857 16.1667M11 12.5556L14.5714 16.1667" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>      
