--- a/_includes/sections/faqs.html
+++ b/_includes/sections/faqs.html
@@ -119,7 +119,7 @@ initAccordion(categories[0]);
 <div class="px-4 py-12 bg-purple-50 rounded-3xl">
   <div class="max-w-7xl mx-auto is-animated">
     <div class="text-center mb-8">
-      {% include section-headline.html text=section_data.headline animation=false %}
+      {% include elements/section-headline.html text=section_data.headline animation=false %}
     </div>
     <div class="max-w-4xl mx-auto" id="faq-app">
 
