--- a/_includes/sections/image-quote-text.html
+++ b/_includes/sections/image-quote-text.html
@@ -1,10 +1,10 @@
 <div class="px-8 md:px-4 py-10 md:py-32 mt-24 {% if include.bg %}bg-{{include.bg}} rounded-3xl {% endif %}">
-    <div class="flex flex-col-reverse md:flex-row items-center gap-8 max-w-7xl mx-auto 
+    <div class="flex flex-col-reverse justify-evenly md:flex-row items-center gap-8 max-w-7xl mx-auto 
     {% if include.left %}md:flex-row{% else %}md:flex-row-reverse{% endif %}">
         <!-- Image -->
         <div class="w-full md:w-1/2 flex justify-center relative">
             <img src="{{ include.image | relative_url }}" alt="{{ include.headline | escape }}"
-                class="max-h-128 object-contain w-full">
+                class="max-h-128 object-contain w-full max-w-md">
             <!-- Tags -->
             {% if include.tags %}
             <div class="absolute inset-0 pointer-events-none">
@@ -49,14 +49,14 @@
             {% endif %}
         </div>
         <!-- Text Content -->
-        <div class="w-full md:w-1/2 flex flex-col items-start {% if include.centered %}text-center md:text-left{% endif %}">
-            {% include section-headline.html text=include.headline %}
-            {% include section-subheadline.html text=include.subheadline %}
-            <div class="mb-4 is-animated text-lg md:text-base">
+        <div class="w-full md:w-1/3 flex flex-col items-start {% if include.centered %}text-center md:text-left{% endif %}">
+            {% include elements/section-headline.html text=include.headline %}
+            {% include elements/section-subheadline.html text=include.subheadline %}
+            <div class="mb-4 is-animated text-lg md:text-base max-w-md">
              {{ include.text | markdownify }}
             </div>
             {% if include.button_text and include.button_link %}
-                {% include button.html text=include.button_text link=include.button_link %}
+                {% include elements/button.html text=include.button_text link=include.button_link %}
             {% endif %}
         </div>
     </div>
