--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,14 @@
   <meta name="keywords" content="{{ page.keywords }}">
   <meta name="robots" content="index, follow">
 
+  <!-- Favicon -->
+   <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="{{ site.baseurl }}/assets/favicon/favicon.svg" />
+  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/favicon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="PayDay" />
+  <link rel="manifest" href="{{ site.baseurl }}/assets/favicon/site.webmanifest" />
+
   <!-- CSS -->
 
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
