--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -54,15 +54,15 @@
                         style="max-height:0;transition:max-height 0.3s ease-in-out;">
                         <div class="pb-4">
                             <a class="block leading-8 text-gray-400 transition-colors duration-200 hover:text-black"
-                                href="/companies">
+                                href="{{ site.baseurl }}/companies">
                                 {{ site.data.textblocks.footer.for_companies }}
                             </a>
                             <a class="block leading-8 text-gray-400 transition-colors duration-200 hover:text-black"
-                                href="/anti-moneylaundering">
+                                href="{{ site.baseurl }}/anti-moneylaundering">
                                 {{ site.data.textblocks.footer.anti_money_laundering }}
                             </a>
                             <a class="block leading-8 text-gray-400 transition-colors duration-200 hover:text-black"
-                                href="/financial-advice">
+                                href="{{ site.baseurl }}/financial-advice">
                                 {{ site.data.textblocks.footer.financial_advice }}
                             </a>
                         </div>
@@ -86,15 +86,15 @@
                         style="max-height:0;transition:max-height 0.3s ease-in-out;">
                         <div class="pb-4">
                             <a class="block leading-8 text-gray-400 transition-colors duration-200 hover:text-black"
-                                href="/process-benefits">
+                                href="{{ site.baseurl }}/process-benefits">
                                 {{ site.data.textblocks.footer.process_benefits }}
                             </a>
                             <a class="block leading-8 text-gray-400 transition-colors duration-200 hover:text-black"
-                                href="/support">
+                                href="{{ site.baseurl }}/support">
                                 {{ site.data.textblocks.footer.support }}
                             </a>
                             <a class="block leading-8 text-gray-400 transition-colors duration-200 hover:text-black"
-                                href="/faqs">
+                                href="{{ site.baseurl }}/faqs">
                                 {{ site.data.textblocks.footer.faqs }}
                             </a>
                         </div>
@@ -118,15 +118,15 @@
                         style="max-height:0;transition:max-height 0.3s ease-in-out;">
                         <div class="pb-4">
                             <a class="block leading-8 text-gray-400 transition-colors duration-200 hover:text-black"
-                                href="/privacy">
+                                href="{{ site.baseurl }}/privacy">
                                 {{ site.data.textblocks.footer.privacy }}
                             </a>
                             <a class="block leading-8 text-gray-400 transition-colors duration-200 hover:text-black"
-                                href="/terms">
+                                href="{{ site.baseurl }}/terms">
                                 {{ site.data.textblocks.footer.terms }}
                             </a>
                             <a class="block leading-8 text-gray-400 transition-colors duration-200 hover:text-black"
-                                href="/imprint">
+                                href="{{ site.baseurl }}/imprint">
                                 {{ site.data.textblocks.footer.imprint }}
                             </a>
                         </div>
@@ -139,32 +139,32 @@
                 <div class="font-bold mb-8">
                     {{ site.data.textblocks.footer.company }}
                 </div>
-                <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black" href="/companies">
+                <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black" href="{{ site.baseurl }}/companies">
                     {{ site.data.textblocks.footer.for_companies }}
                 </a>
                 <br>
                 <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black"
-                    href="/anti-moneylaundering">
+                    href="{{ site.baseurl }}/anti-moneylaundering">
                     {{ site.data.textblocks.footer.anti_money_laundering }}
                 </a>
                 <br>
                 <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black"
-                    href="/financial-advice">
+                    href="{{ site.baseurl }}/financial-advice">
                     {{ site.data.textblocks.footer.financial_advice }}
                 </a>
             </div>
             <div class="hidden md:block">
                 <div class="font-bold mb-8">{{ site.data.textblocks.footer.help }}</div>
                 <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black"
-                    href="/process-benefits">
+                    href="{{ site.baseurl }}/process-benefits">
                     {{ site.data.textblocks.footer.process_benefits }}
                 </a>
                 <br>
-                <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black" href="/support">
+                <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black" href="{{ site.baseurl }}/support">
                     {{ site.data.textblocks.footer.support }}
                 </a>
                 <br>
-                <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black" href="/faqs">
+                <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black" href="{{ site.baseurl }}/faqs">
                     {{ site.data.textblocks.footer.faqs }}
                 </a>
             </div>
@@ -172,15 +172,15 @@
                 <div class="font-bold mb-8">
                     {{ site.data.textblocks.footer.more }}
                 </div>
-                <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black" href="/privacy">
+                <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black" href="{{ site.baseurl }}/privacy">
                     {{ site.data.textblocks.footer.privacy }}
                 </a>
                 <br>
-                <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black" href="/terms">
+                <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black" href="{{ site.baseurl }}/terms">
                     {{ site.data.textblocks.footer.terms }}
                 </a>
                 <br>
-                <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black" href="/imprint">
+                <a class="leading-8 text-gray-400 transition-colors duration-200 hover:text-black" href="{{ site.baseurl }}/imprint">
                     {{ site.data.textblocks.footer.imprint }}
                 </a>
             </div>
