--- a/_includes/layout/nav.html
+++ b/_includes/layout/nav.html
@@ -55,7 +55,7 @@
         DE
     </div>
     <!-- Mobile Menu -->
-    <div id="nav-overlay" class="fixed px-8 top-0 left-0 h-screen w-screen inset-0 bg-white z-30 flex flex-col justify-between pt-32 pb-16 opacity-0 pointer-events-none transition-opacity duration-700 lg:hidden">
+    <div id="nav-overlay" class="fixed px-8 top-0 left-0 h-[100dvh] w-screen inset-0 bg-white z-30 flex flex-col justify-between pt-32 pb-16 opacity-0 pointer-events-none transition-opacity duration-700 lg:hidden">
       <div class="flex flex-col space-y-8 ">
         {% for link in site.data.textblocks.nav.nav_links %}
         <a href="{{ link.url }}" class="text-3xl flex justify-between items-center w-full {% if page.permalink == link.url or page.url == link.url or page.permalink == link.url | append: '/' or page.url == link.url | append: '/' or page.permalink contains link.url or page.url contains link.url %}font-bold{% endif %}">
