--- a/_includes/layout/nav.html
+++ b/_includes/layout/nav.html
@@ -15,7 +15,7 @@
         </a>
         <!-- Main Menu -->
         {% for link in site.data.textblocks.nav.nav_links %}
-          <a href="{{ link.url }}" class="hidden lg:inline {% if page.permalink == link.url or page.url == link.url or page.permalink == link.url | append: '/' or page.url == link.url | append: '/' or page.permalink contains link.url or page.url contains link.url %}font-bold{% endif %}">
+          <a href="{{ site.baseurl }}{{ link.url }}" class="hidden lg:inline {% if page.permalink == link.url or page.url == link.url or page.permalink == link.url | append: '/' or page.url == link.url | append: '/' or page.permalink contains link.url or page.url contains link.url %}font-bold{% endif %}">
             {{ link.text }}
           </a>
         {% endfor %}
@@ -31,10 +31,10 @@
       </div>
       <!-- Right: Actions -->
       <div class="flex items-center space-x-4">
-        <a href="{{ site.data.textblocks.nav.nav_register.link }}" class="hidden md:inline">
+        <a href="{{ site.baseurl }}{{ site.data.textblocks.nav.nav_register.link }}" class="hidden md:inline">
           {{ site.data.textblocks.nav.nav_register.text }}
         </a>
-        <a href="{{ site.data.textblocks.nav.nav_cta.link }}" class="hidden md:inline bg-black hover:bg-pink-100 transition-colors duration-200 text-white font-medium px-4 py-3 rounded-xl">
+        <a href="{{ site.baseurl }}{{ site.data.textblocks.nav.nav_cta.link }}" class="hidden md:inline bg-black hover:bg-pink-100 transition-colors duration-200 text-white font-medium px-4 py-3 rounded-xl">
           {{ site.data.textblocks.nav.nav_cta.text }}
         </a>
         <button id="nav-toggle" class="lg:hidden ml-2 p-2 rounded focus:outline-none group">
@@ -58,7 +58,7 @@
     <div id="nav-overlay" class="fixed px-8 top-0 left-0 h-[100dvh] w-screen inset-0 bg-white z-30 flex flex-col justify-between pt-32 pb-16 opacity-0 pointer-events-none transition-opacity duration-700 lg:hidden">
       <div class="flex flex-col space-y-8 ">
         {% for link in site.data.textblocks.nav.nav_links %}
-        <a href="{{ link.url }}" class="text-3xl flex justify-between items-center w-full {% if page.permalink == link.url or page.url == link.url or page.permalink == link.url | append: '/' or page.url == link.url | append: '/' or page.permalink contains link.url or page.url contains link.url %}font-bold{% endif %}">
+        <a href="{{ site.baseurl }}{{ link.url }}" class="text-3xl flex justify-between items-center w-full {% if page.permalink == link.url or page.url == link.url or page.permalink == link.url | append: '/' or page.url == link.url | append: '/' or page.permalink contains link.url or page.url contains link.url %}font-bold{% endif %}">
           {{ link.text }}
           <svg width="28" height="24" viewBox="0 0 28 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M1 12H27M27 12L15.8571 23M27 12L15.8571 1" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -67,16 +67,16 @@
       {% endfor %}
       </div>
       <div class="flex flex-col space-y-4">
-        <a href="{{ site.data.textblocks.nav.nav_cta.link }}" class="text-xl bg-black hover:bg-pink-100 transition-colors duration-200 text-white px-4 py-4 rounded-xl text-center">
+        <a href="{{ site.baseurl }}{{ site.data.textblocks.nav.nav_cta.link }}" class="text-xl bg-black hover:bg-pink-100 transition-colors duration-200 text-white px-4 py-4 rounded-xl text-center">
           {{ site.data.textblocks.nav.nav_cta.text }}
         </a>
-        <a href="{{ site.data.textblocks.nav.nav_register.link }}" class="text-xl border border-grey hover:bg-pink-100 transition-colors duration-200 px-4 py-4 rounded-xl text-center">
+        <a href="{{ site.baseurl }}{{ site.data.textblocks.nav.nav_register.link }}" class="text-xl border border-grey hover:bg-pink-100 transition-colors duration-200 px-4 py-4 rounded-xl text-center">
           {{ site.data.textblocks.nav.nav_register.text }}
         </a>
       </div>
     </div>
   </nav>
-  <a href="{{ site.data.textblocks.nav.nav_floating_cta.link }}" class="fixed bottom-2 right-2 bg-black w-14 h-14 rounded-full z-10 flex items-center justify-center opacity-0 animate-fadein-100 md:hidden">
+  <a href="{{ site.baseurl }}{{ site.data.textblocks.nav.nav_floating_cta.link }}" class="fixed bottom-2 right-2 bg-black w-14 h-14 rounded-full z-10 flex items-center justify-center opacity-0 animate-fadein-100 md:hidden">
     <svg width="22" height="28" viewBox="0 0 22 28" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M13.8571 1V6.77778C13.8571 7.16087 14.0077 7.52827 14.2756 7.79915C14.5435 8.07004 14.9068 8.22222 15.2857 8.22222H21M13.8571 1H3.85714C3.09938 1 2.37266 1.30436 1.83684 1.84614C1.30102 2.38791 1 3.12271 1 3.88889V24.1111C1 24.8773 1.30102 25.6121 1.83684 26.1539C2.37266 26.6956 3.09938 27 3.85714 27H18.1429C18.9006 27 19.6273 26.6956 20.1632 26.1539C20.699 25.6121 21 24.8773 21 24.1111V8.22222M13.8571 1L21 8.22222M11 12.5556V21.2222M11 12.5556L7.42857 16.1667M11 12.5556L14.5714 16.1667" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>      
